step 2-split up the night bin into two

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 Dataset/*
 twitter_data.csv
 .ipynb_checkpoints/*
+*.csv
+test-NLTK.ipynb
+.ipynb_checkpoints/g36-project-step2 - time when users are likely to be on Twitter portal -checkpoint.ipynb
+.ipynb_checkpoints/g36-project-step2 - time when users are likely to be on Twitter portal -checkpoint.ipynb
